Upload hero-section correctly as a second section. Previous involved banner-section. Gradient visibility need to be fixed.

--- a/css/main.css
+++ b/css/main.css
@@ -7,187 +7,162 @@
 
 body {
   position: relative;
-  font-family: 'Inter', sans-serif;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Inter', 'Rubik', sans-serif;
 }
 
-/* Header */
-.nav-container {
+.hero-pos {
   position: absolute;
+}
+
+.hero-section {
   width: 1440px;
-  height: 850px;
+  height: 865px;
   left: 0px;
-  top: 0px;
+  top: 850px;
   background: #0d0d2b;
 }
 
-.nav-container .top {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.nav-container .top .logo {
-  position: absolute;
-  width: 40px;
-  height: 40px;
+.hero-section .icon-digital-currency {
+  width: 80px;
+  height: 80px;
   left: 120px;
-  top: 66px;
+  top: 100px;
 }
 
-.nav-container .top .crappo {
-  position: absolute;
-  width: 79px;
-  height: 22px;
-  left: 176px;
-  top: 75px;
-  font-family: 'Inter';
-  font-style: normal;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 22px;
-  /* identical to box height */
-  letter-spacing: 0.04em;
-  /* Neutral / White */
-  color: #ffffff;
-}
-
-.nav-container .nav-menu {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: absolute;
-  width: 339px;
-  height: 28px;
-  left: 706px;
-  top: 72px;
-}
-
-.nav-container .nav-items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.nav-container .nav-items li {
-  text-transform: capitalize;
-  text-decoration: none;
-  list-style: none;
-  margin-right: 32px;
-  font-family: 'Rubik';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-  /* identical to box height, or 175% */
-  letter-spacing: 0.01em;
-  /* Neutral / White */
-  color: #ffffff;
-}
-
-.nav-container .sing-in .login {
-  position: absolute;
-  text-transform: capitalize;
-  width: 43px;
-  height: 24px;
-  left: 1101px;
-  top: 74px;
-  /* Body / Small - Medium */
-  font-family: 'Rubik';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 150%;
-  /* identical to box height, or 24px */
-  text-align: center;
-  /* Neutral / White */
-  color: #ffffff;
-}
-
-.nav-container .sing-in .divider {
-  position: absolute;
-  width: 24px;
-  height: 0px;
-  left: 1168px;
-  top: 74px;
-  opacity: 0.3;
-  /* Gray 6 */
-  border: 1px solid #f2f2f2;
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
-.nav-container .sing-in .button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 14px 32px;
-  position: absolute;
-  width: 130px;
-  height: 52px;
-  left: 1192px;
-  top: 60px;
-  /* Color / Accent */
-  background: #3671e9;
-  border-radius: 32px;
-}
-
-.nav-container .info {
-  position: absolute;
-  width: 365px;
-  height: 40px;
-  left: 120px;
-  top: 243px;
-}
-
-.nav-container .head {
-  position: absolute;
-  width: 588px;
-  height: 228px;
-  left: 120px;
-  top: 307px;
-  /* Heading / H1 */
+.hero-section .text-digital-currency-head {
+  width: 110px;
+  height: 60px;
+  left: 224px;
+  top: 100px;
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
-  line-height: 76px;
-  /* Neutral / White */
+  font-size: 40px;
+  line-height: 150%;
   color: #ffffff;
 }
 
-.nav-container .text {
-  position: absolute;
-  width: 435px;
-  height: 56px;
-  left: 120px;
-  top: 559px;
-  /* Body / Small - Regular */
+.hero-section .text-digital-currency-content {
+  width: 230px;
+  height: 28px;
+  left: 224px;
+  top: 164px;
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 28px;
-  /* or 175% */
   letter-spacing: 0.01em;
-  /* Neutral / Grey 5 */
   color: #e0e0e0;
 }
 
-.nav-container .hero-btn {
+.icon-trusted-wallets {
+  width: 80px;
+  height: 80px;
+  left: 553px;
+  top: 100px;
+}
+
+.text-trusted-wallets-head {
+  /* 10M+ */
+  width: 105px;
+  height: 60px;
+  left: 657px;
+  top: 100px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 150%;
+  color: #ffffff;
+}
+
+.text-trusted-wallets-content {
+  /* Trusted Wallets Investor */
+  width: 230px;
+  height: 28px;
+  left: 657px;
+  top: 164px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.01em;
+  color: #e0e0e0;
+}
+
+.icon-countries {
+  width: 80px;
+  height: 80px;
+  left: 986px;
+  top: 100px;
+}
+
+.text-countries-head {
+  /* 195 */
+  width: 72px;
+  height: 60px;
+  left: 1090px;
+  top: 100px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 150%;
+  color: #ffffff;
+}
+
+.text-countries-content {
+  /* Countries Supported */
+  width: 230px;
+  height: 28px;
+  left: 1090px;
+  top: 164px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.01em;
+  color: #ffffff;
+}
+
+.hero-img {
+  width: 650px;
+  height: 473px;
+  left: 120px;
+  top: 292px;
+}
+
+.hero-head {
+  width: 480px;
+  height: 119.95px;
+  left: 840px;
+  top: 368.97px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 150%;
+  color: #ffffff;
+}
+
+.hero-text {
+  width: 408px;
+  height: 83.96px;
+  left: 840px;
+  top: 512.91px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.01em;
+  color: #e0e0e0;
+}
+
+.hero-learn-more-btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -201,44 +176,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 16px 16px 16px 24px;
+  padding: 16px 24px;
   gap: 24px;
-  position: absolute;
-  width: 202px;
-  height: 64px;
-  left: 120px;
-  top: 647px;
+  width: 146px;
+  height: 59px;
+  left: 840px;
+  top: 628.86px;
   background: #3671e9;
   border-radius: 32px;
-}
-
-.nav-container .hero-image {
-  position: absolute;
-  width: 604px;
-  height: 585.15px;
-  left: 716px;
-  top: 163px;
-}
-
-.nav-container .hero-gradient1 {
-  position: absolute;
-  width: 120px;
-  height: 997.88px;
-  left: 1091.19px;
-  top: 384px;
-  -webkit-transform: rotate(60deg);
-          transform: rotate(60deg);
-}
-
-.nav-container .hero-gradient2 {
-  position: absolute;
-  width: 120px;
-  height: 997.88px;
-  left: 660px;
-  top: 1072.86px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(34.75%, rgba(255, 255, 255, 0.04)), to(rgba(255, 255, 255, 0.01)));
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.04) 34.75%, rgba(255, 255, 255, 0.01) 100%);
-  -webkit-transform: rotate(-120deg);
-          transform: rotate(-120deg);
 }
 /*# sourceMappingURL=main.css.map */
